# projeto_crud

./: .gitignore  README.md  pyproject.toml
src/: controller.py  main.py  models.py  schema.py
